backends/drm: only update outputs on GPUs that actually changed

Especially when power management is involved, probing connectors on a GPU can
take time, during which KWin's main thread would be blocked.

BUG: 519461